--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,9 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.ubuntu-light {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
