--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,9 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.island-moments-regular {
+  font-family: "Island Moments";
+  font-weight: 400;
+  font-style: normal;
+}
