--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,23 +4,21 @@
   align-items: center;
   margin: 25px;
   padding: 10px;
-  padding-left: 100px;  
+  padding-left: 100px;
   padding-right: 100px;
-  
+
   background-size: cover;
   background-position: center;
-  background-color: #D4D4D4;
+  background-color: #d4d4d4;
   /* background-color: #161922; */
-  font-family: 'Montserrat Subrayada', sans-serif;
+  font-family: "Montserrat Subrayada", sans-serif;
   color: #000000;
   /*color: #ffffff;*/
   border-radius: 20px; /* Add this line to create curves */
 }
 
 .footer-logo {
- 
   margin-bottom: 10px;
-   
 }
 
 .dnd-logo {
@@ -50,7 +48,7 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 10px;
-  padding-left: 120px;  /* Add padding to move content inward */
+  padding-left: 120px; /* Add padding to move content inward */
   padding-right: 150px; /* Add padding to move content inward */
 }
 
@@ -82,7 +80,7 @@
 
 .phone-icon {
   margin-top: -10px; /* Adjust the margin to position the icon between text and numbers */
-   /* Align the icon with the "Contact Us" text */
+  /* Align the icon with the "Contact Us" text */
 }
 
 .icon {
@@ -114,7 +112,7 @@
 }
 
 .footer a:hover {
-  color: #F55E04;
+  color: #f55e04;
 }
 
 /* Responsive Design */
@@ -136,7 +134,8 @@
     padding-left: 0;
   }
 
-  .contact-us, .underline {
+  .contact-us,
+  .underline {
     padding-left: 0;
     text-align: center;
   }
@@ -147,7 +146,6 @@
   }
 
   .footer-social {
-    flex-direction: column;
     align-items: center;
   }
 }
