--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,5 +1,6 @@
 .footer {
   display: flex;
+  flex-wrap: nowrap;
   flex-direction: column;
   align-items: center;
   margin: 25px;
@@ -34,39 +35,32 @@
   margin: 10px 0;
 }
 
-.footer-nav {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 10px;
-}
 
 .footer-nav a:hover {
   text-decoration: underline;
 }
 
-.footer-contact {
+/* .footer-contact {
   display: flex;
   justify-content: space-between;
   width: 100%;
   margin-bottom: 10px;
-  padding-left: 120px;  /* Add padding to move content inward */
-  padding-right: 150px; /* Add padding to move content inward */
-}
+  padding-left: 120px; 
+} */
 
-.footer-location {
+/* .footer-location {
   display: flex;
   align-items: center;
   gap: 10px;
-}
+} */
 
-.footer-phone {
+/* .footer-phone {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
-  padding-left: 50px; /* Add padding to move content inward */
-}
+  padding-left: 50px; 
+} */
 
 .contact-us {
   margin-bottom: 5px;
@@ -74,8 +68,7 @@
 }
 
 .phone-details {
-  display: flex;
-  flex-direction: column;
+  display: flex-nowrap;
   align-items: flex-start;
   gap: 10px;
 }
@@ -118,14 +111,14 @@
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .footer {
     padding-left: 20px;
     padding-right: 20px;
   }
 
   .footer-contact {
-    flex-direction: column;
+     
     align-items: center;
     padding-left: 20px;
     padding-right: 20px;
@@ -141,13 +134,11 @@
     text-align: center;
   }
 
-  .footer-nav {
-    flex-direction: column;
+  .footer-nav { 
     align-items: center;
   }
 
   .footer-social {
-    flex-direction: column;
     align-items: center;
   }
-}
+} */
