--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -98,11 +98,11 @@
   height: auto;
 }
 
-.footer-image {
-  width: 100%; /* Adjust the width as needed */
+/* .footer-image {
+  width: 100%;   
   height: auto;
   margin-top: 10px;
-}
+} */
 
 .footer a:hover {
   color: #f55e04;
